force-app/main/default/objects/numm__AffectationEtablissement__c/numm__AffectationEtablissement__c.object-meta.xml
<CustomObject>
    <label>Affectation d&#39;établissement</label>
    <nameField>
        <displayFormat>Aff-{00000}</displayFormat>
        <label>Affectation d&#39;établissement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affectations d&#39;établissement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>