force-app/main/default/objects/numm__AffectationEtablissement__c/fields/numm__Compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte__c</fullName>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affectations d&#39;établissement</relationshipLabel>
    <relationshipName>Affectations_dEtablissement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>