force-app/main/default/objects/numm__AffectationEtablissement__c/fields/numm__DtAu__c.field-meta.xml
<CustomField>
    <fullName>numm__DtAu__c</fullName>
    <label>Au</label>
    <type>Date</type>
</CustomField>