force-app/main/default/objects/numm__AffectationEtablissement__c/fields/numm__DtDu__c.field-meta.xml
<CustomField>
    <fullName>numm__DtDu__c</fullName>
    <label>Du</label>
    <required>true</required>
    <type>Date</type>
</CustomField>