force-app/main/default/objects/numm__AffectationEtablissement__c/fields/numm__Etablissement__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement__c</fullName>
    <label>Etablissement</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Affectations d&#39;établissement</relationshipLabel>
    <relationshipName>Affectations_dEtablissement</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>