force-app/main/default/objects/numm__AffectationEtablissement__c/validationRules/numm__DatesAffectation.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__DatesAffectation</fullName>
    <active>true</active>
    <errorConditionFormula>numm__DtDu__c &gt; numm__DtAu__c</errorConditionFormula>
    <errorMessage>Dates incorrectes</errorMessage>
</ValidationRule>