force-app/main/default/objects/numm__AffectationEtablissement__c/validationRules/numm__VerifTypeEtablissement.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__VerifTypeEtablissement</fullName>
    <active>true</active>
    <description>doit être un parking ou un appartement ou l&#39;établissement Rompu</description>
    <errorConditionFormula>NOT OR(ISPICKVAL(numm__Etablissement__r.numm__TypeEtablissement__c, &quot;Appartement&quot;), ISPICKVAL(numm__Etablissement__r.numm__TypeEtablissement__c, &quot;Parking&quot;),
ISPICKVAL(numm__Etablissement__r.numm__TypeEtablissement__c, &quot;Rompu&quot;))</errorConditionFormula>
    <errorMessage>Affectation non valide pour ce type d&#39;établissement</errorMessage>
</ValidationRule>